Fixed cropped name

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    padding-top: 50px;
     background: #f4f4f9;
     color: #333;
 }
